# two_points_interpolation_py

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py  test_two_point_interpolation.py  two_point_interpolation_constant_acc.py  two_point_interpolation_constant_jerk.py  two_point_interpolation_test_constant_acc.py  two_point_interpolation_test_constant_jerk.py
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  copilot-review.yml  test.yml
docs/: CHANGELOG.md  CONSTANT_ACC_DERIVATION.md  QUADRATIC_COEFFICIENTS_DERIVATION.md  edge_cases_analysis.md
examples/: example_constant_acc.py  example_constant_jerk.py
tests/: README.md  generate_plots.py  generate_plots_old.py  test_angle_interpolation.py  test_case_loader.py  test_cases.yaml  test_constant_acc.py  test_constant_acc.py.deprecated  test_getters.py  test_yaml_cases.py
two_point_interpolation/: __init__.py  constant_acc.py  constant_jerk.py  py.typed
