[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "two-point-interpolation"
version = "1.3.0"
description = "Two-point interpolation with constant acceleration and constant jerk"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Yuki Okamoto", email = "yuokamoto1988@gmail.com"}
]
keywords = ["robotics", "trajectory", "motion-planning", "interpolation", "acceleration", "jerk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "matplotlib>=3.3.0",
    "mypy>=1.0.0",
    "pylint>=2.15.0",
    "flake8>=5.0.0",
    "autopep8>=2.0.0",
    "pre-commit>=3.0.0",
]
examples = [
    "matplotlib>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/yuokamoto/two_points_interpolation_py"
Repository = "https://github.com/yuokamoto/two_points_interpolation_py"
Documentation = "https://github.com/yuokamoto/two_points_interpolation_py#readme"
Issues = "https://github.com/yuokamoto/two_points_interpolation_py/issues"

[tool.setuptools]
packages = ["two_point_interpolation"]

[tool.setuptools.package-data]
two_point_interpolation = ["py.typed"]

# Mypy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

# Strict checking for constant_acc module
[[tool.mypy.overrides]]
module = "two_point_interpolation.constant_acc"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true

# Ignore constant_jerk (known issues documented in TODO)
[[tool.mypy.overrides]]
module = "two_point_interpolation.constant_jerk"
ignore_errors = true

# Pylint configuration
[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name (allow single letter variables)
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "t", "p", "v", "a", "dt", "p0", "pe", "v0", "ve", "t0", "t1", "t2", "t3"]
